--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <div class="banner">
         <div class="container">
           <h1><strong><span class="dark">KC</span></strong> <br />Construction and Renovation</h1>
-          <h3>We get the  job done <strong>ON TIME</strong><i class="fa fa-check-square-o"></i></h3>
+          <h3>We get the  job done <br /><strong>ON TIME</strong><i class="fa fa-check-square-o"></i></h3>
           <a href="#contact" class="scroll-link btn btn-white"> Free Estimate </a>
         </div>
       </div>
