--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <!--banner-->
       <div class="banner">
         <div class="container">
-          <h1><strong><span class="dark">KC</span></strong> <br />Construction and Renovation</h1>
+          <h1><strong><span class="dark">KC</span> <br />Construction and Renovation</strong></h1>
           <h3>We get the  job done <br /><strong>ON TIME</strong><i class="fa fa-check-square-o"></i></h3>
           <a href="#contact" class="scroll-link btn btn-white"> Free Estimate </a>
         </div>
@@ -280,7 +280,7 @@
   </div>
 </div>
 <div class="contact-image">
-  <h1>Let's Wrok Together</h1>
+  <h1>You dream it, We Build it!</h1>
 </div>
   </section>
 
