--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
           </div>
           
           </div>
-         <h4>We get the  job done <br /><strong>ON TIME</strong><i class="fa fa-check-square-o"></i></h4>
+         <h1 class="dark">We get the  job done ON TIME<i class="fa fa-check-square-o"></i></h1>
     </section>
 
     <!-- Areas-->
