--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
           <div class="box">Floor</div>
           <div class="box">Carpet</div>
           <div class="box">Granite</div>
-          <div class="box">Gavinets</div>
+          <div class="box">Cabinet</div>
           <div class="box">Cedar</div>
           <div class="box">Drywall</div>
-          <div class="box">Sherock</div>
+          <div class="box">Sheetrock</div>
         </div>
         <h1 class="light">Excellent Quality <i class="fa fa-arrow-circle-right"></i> Done Fast</h1>
       </div>
