--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>KC Construction</title>
     <!--FAVICON-->
-     <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
+     <link rel="shortcut icon" type="image/png" href="images/fav.png"/>
     <!--BOOSTRAP-->
     
     <link
