--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@
       <!--banner-->
       <div class="banner">
         <div class="container">
-          <h1><strong><span class="name">KC</span> <i class="fa fa-home" aria-hidden="true"></i><br />Construction and Renovation</strong></h1>
-         
+          <img src="images/LOGO.png" alt="">
           <a href="#contact" class="scroll-link btn btn-white"> Free Estimate </a>
         </div>
       </div>
