--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <!--banner-->
       <div class="banner">
         <div class="container">
-          <img src="images/LOGO.png" alt="">
+          <img src="images/LOGO.png" alt="" width="50%">
           <a href="#contact" class="scroll-link btn btn-white"> Free Estimate </a>
         </div>
       </div>
