--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <!--
     <!-- header -->
     <header id="home">
       <!-- navbar-->
@@ -302,7 +303,9 @@
     <a href="#home" class="scroll-link top-link">
       <i class="fas fa-arrow-up"></i>
     </a>
-
+-->
+      
+      <h1>COMING SOON</h1>
     <!-- javascript-->
     <script src="app.js"></script>
   </body>
