--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
       <!-- banner -->
       <div class="banner">
         <div class="container">
+          <h1>GENERAL CONTRACTOR</h1>
           <h1>LICENSED AND INSURED</h1>
           <p>
             Construction and Renovation Company Serving Birmingham, Alabama  and surrounding areas...
@@ -89,7 +90,7 @@
     <section id="services" class="section">
        <div class="title">
         <h2>Our<span> Services</span></h2>
-        <p>We are just one call awawy</p>
+        <p>We are just one call away!</p>
       </div>
 
       <div class="gallery">
