--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <!-- banner -->
       <div class="banner">
         <div class="container">
-          <h1>GENERAL CONTRACTOR</h1>
+          <h1 style="color:black">GENERAL CONTRACTOR</h1>
           <h1>LICENSED AND INSURED</h1>
           <p>
             Construction and Renovation Company Serving Birmingham, Alabama  and surrounding areas...
