--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
       <!-- banner -->
       <div class="banner">
         <div class="container">
-          <h1 style="color:black">GENERAL CONTRACTOR</h1>
-          <h1>LICENSED AND INSURED</h1>
+          
+          <h1>LICENSED & INSURED</h1>
           <p>
-            Construction and Renovation Company Serving Birmingham, Alabama  and surrounding areas...
+            GENERAL CONTRACTOR Serving Birmingham, Alabama  and surrounding areas...
           </p>
           <a href="tel:205-400-6079" class="scroll-link btn btn-white">
             Free Estimate
