--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
      <!--FAVICON-->
-    <link rel="shortcut icon" type="image/png" href="images/favpng.png" />
+    <link rel="shortcut icon" type="image/png" href="images/google(1).png" />
     <!-- font-awesome -->
     <link
       rel="stylesheet"
